--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 </div>
                         </div>
                         <div class="days-forecast">
-                                <h2>Prakiraan Cuaca 5-Hari</h2>
+                                <h2>Prakiraan Cuaca Dalam 5-Hari</h2>
                                 <ul class="weather-cards">
                                         <li class="card">
                                                 <h3>( ㅤㅤㅤㅤㅤ )</h3>
